--- a/webui/package.json
+++ b/webui/package.json
@@ -18,6 +18,7 @@
     "@transcend-io/conflux": "^4.1.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
+    "vue-markdown-render": "^2.2.1",
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.7",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^20.14.5",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-prettier": "^9.0.0",
